syntax = "proto3";

package PRO;

option go_package = "gamelib/protobuf/gpro";
option csharp_namespace = "com.cms.client.network.gpro";
option java_multiple_files = true;
option java_package = "com.cms.client.network.gpro";

enum ROBOT_CONST{
  ROBOT_CONST_UNIVERSAL = 0;
  ROBOT_VERSION =1;
}

message Robot_Config_Req{
  int32 version = 1;
  string robotname = 2;
  string robotpwd = 3;
}

message Robot_Config_Ack{
  //机器人协议版本
  int32 version = 1;		
  //0 成功,-1没有此机器人,-2密码错,-3其他错误, -4版本错误
  int32 result = 2;
  //只有ret == 0 时,才有下面选项
  //机器人在服务器的唯一标识
  optional int32 robotid = 3;
  optional string urladdr = 4;
  optional string openprefix = 5;
  
  optional int64 startuserid = 7;
  optional int32 users = 8;
  
  optional string dbuser = 10;
  optional string dbpwd = 11;
  optional string dbname = 12;
  optional string dbip = 13;
}

message Robot_Start_Ack{
  //开始的用户数,不能大于配置里的 users
  int32 startusernum = 1;
  //两个用户间登录时间间隔,单位(毫秒)
  int64 logininterval = 2;
  //机器人类型,参照 TEST_TYPE
  repeated string behavior = 3;
}

message Robot_Stop_Ack{
}

message Robot_Record_req{
  int32 robotid = 1;
  int32 logs = 2;
}

message Robot_StartRecord_req{
  int32 robotid = 1;
}
message Robot_EndRecord_req{
  int32 robotid = 1;
  int32 logs = 2;
}

message Robot_UploadLogs_ntf{
}

message Robot_ClearLogs_ntf{
}

message Robot_UserPrefixChg_ntf{
  string prefix = 1;
}
